# lteMqttClient

./: CMakeLists.txt  README.md  fanControl.cpp  main.cpp  mqttSettings.h  run.sh  temparature.cpp  temperature.cpp
